# ROS2_ws_for_RMP220

./: README.md
RMP220_For_1152Wh Battery/V1.00.3_20221130/ROS/src/segwayrmp/include/: comm_ctrl_navigation.h
RMP220_For_1152Wh Battery_V1.00.3_20221130/ROS2.0/src/segwayrmp/src/: robot.cpp
RMP220_For_551&1033Wh Battery/V2.00.3_20221130/ROS/src/segwayrmp/lib/: ctrl_arm64-v8a
RMP220_For_551&1033Wh Battery_V2.00.3_20221130/ROS/src/segwayrmp/lib/: ctrl_x86_64
RMP220_For_551Wh Battery_V2.00.3_20221130/ROS/src/segwayrmp/src/: robot.cpp
RMP220_For_551Wh Battery_V2.00.3_20221130/ROS2.0/src/segway_msgs/srv/: RosGetSwVersionCmd.srv
RMP220_For_551Wh Battery_V2.00.3_20221130/ROS2.0/src/segwayrmp/include/: comm_ctrl.h
RMP220_For_551Wh Battery_V2.00.3_20221130/ROS2.0/src/segwayrmp/include/segwayrmp/: robot.h
RMP220_Old_Battery_V1.00.3_20221130/ROS/src/segway_msgs/: CMakeLists.txt
RMP220_Old_Battery_V1.00.3_20221130/ROS/src/segwayrmp/include/segwayrmp/: robot.h
RMP220_Old_Battery_V1.00.3_20221130/ROS2.0/src/segway_msgs/: CMakeLists.txt
RMP220_Old_Battery_V1.00.3_20221130/ROS2.0/src/segwayrmp/: CMakeLists.txt
src/segway_msgs/: CMakeLists.txt
src/segwayrmp/include/: comm_ctrl_navigation.h
src/segwayrmp/include/segwayrmp/: robot.h
src/segwayrmp/lib/: ctrl_arm64-v8a  ctrl_x86_64
src/segwayrmp/src/: robot.cpp
